--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@ Older browsers are supported by automatically providing traditional web-based UI
 <h2>Demo and sample code</h2>
 
 <div class="front-page-box">
-To get quick feel of the toolkit, execute 
-<code>demo/start.bat</code> on Windows or <code>demo/start.sh</code> on UNIX
-platform. You now have demo running in <a href="http://localhost:8888/">http://localhost:8888/</a>.
+To get quick feel of the toolkit, look at the demos:
+<ul>
+<li><a href="http://toolkit.itmill.com/demo/">Online at IT Mill</a></li>
+<li>To run demos locally, run start.bat (on Windows) or start.sh (on Mac or Linux) in <a href="demo">demo-directory</a></li>
+</ul>
 <br/>
 </div>
 
