Restored debug options, added firebug link.
svn changeset:506 branch:toolkit

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,15 +17,25 @@
 			<tr>
 				<td><a href="features/">Autodetected mode</a></td>
 				<td>Use AJAX if supported by browser, then fallback to HTML
-				mode.</td>
+				mode</td>
 			</tr>
 			<tr>
 				<td><a href="features/?renderingMode=ajax">AJAX mode</a></td>
-				<td>Select AJAX-based technology mode.</td>
+				<td>Select AJAX-based technology mode</td>
+			</tr>
+			<tr>
+				<td><a href="features/?renderingMode=ajax&debug=true">AJAX
+				mode with debug</a></td>
+				<td>As above but with <a href="http://www.getfirebug.com/">firebug</a> debug extensions</td>
 			</tr>
 			<tr>
 				<td><a href="features/?renderingMode=html">HTML mode</a></td>
-				<td>Select page based request/response technology mode.</td>
+				<td>Select page based request/response technology mode</td>
+			</tr>
+			<tr>
+				<td><a href="features/?renderingMode=html&debug=true">HTML
+				mode with debug</a></td>
+				<td>As above but with <a href="http://www.getfirebug.com/">firebug</a> debug extensions</td>
 			</tr>
 			<tr>
 				<td></td>
@@ -44,7 +54,7 @@
 			<tr>
 				<td><a href="hello/">Autodetected mode</a></td>
 				<td>Use AJAX if supported by browser, then fallback to HTML
-				mode.</td>
+				mode</td>
 			</tr>
 			<tr>
 				<td><a href="src/com/itmill/toolkit/demo/HelloWorld.java">Source
@@ -55,27 +65,26 @@
 		</table>
 		</td>
 	</tr>
-
+	
 	<tr>
 		<td>
 		<h2>Calculator</h2>
-		<ul>
-			<li><a href="calc/">Calc application (Autodetected rendering
-			mode)</a></li>
-			<li><a href="src/com/itmill/toolkit/demo/Calc.java">Source</li>
-		</ul>
+		<table cellpadding="5px">
+			<tr>
+				<td><a href="calc/">Autodetected mode</a></td>
+				<td>Use AJAX if supported by browser, then fallback to HTML
+				mode</td>
+			</tr>
+			<tr>
+				<td><a href="src/com/itmill/toolkit/demo/Calc.java">Source
+				code</a></td>
+				<td>See source code how an simple Toolkit application is
+				created.</td>
+			</tr>
+		</table>
 		</td>
 	</tr>
 
-</table>
-
-<h1>Notes</h1>
-
-<table width="90%" border="1" cellpadding="30px">
-	<tr>
-		<td>IT Mill recommends <a href="http://www.getfirebug.com/">firebug</a>
-		for web development, Toolkit supports it.</td>
-	</tr>
 </table>
 
 </center>
