svn changeset:509 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <div class="front-page-box">
 IT Mill Toolkit allows easy creation of first class user interfaces (UI) for Java-based programs. 
-UI can be programmed in Java with easy to learn <a href="doc/api/index.html">API</a> and the toolkit takes care of 
-creating stunning <a href="http://www.openajax.org/whitepaper.html" target="new">AJAX-based</a> UI.
+UI can be programmed completely in Java with easy to learn <a href="doc/api/index.html">API</a> and the toolkit takes care of 
+creating stunning <a href="http://www.openajax.org/whitepaper.html" target="new">AJAX-based</a> UI. 
 
 <br/><br/>
 
