Making license guidelines clearer based on Samis comments
svn changeset:516 branch:toolkit

--- a/licensing-guidelines.html
+++ b/licensing-guidelines.html
@@ -17,7 +17,7 @@ Licensing in nutshell:
 	contact us for OEM-license tailored for your needs.</li>
 </ul>
 
-<h3>When I can use IT Mill Toolkit for free?</h3>
+<h3>Using IT Mill Toolkit for free</h3>
 
 <p>Application development is complitely free. Furthermore, you can deploy 
 the developed application for testing and validation at the development time.</p>
@@ -27,11 +27,10 @@ the developed application for testing and validation at the development time.</p
 covers use of 4 active users concurrently
 using the application in one server.</p>
 
-<h3>When I must obtain a commercial license?</h3>
+<h3>Commercial use</h3>
 
 <p>A commercial license must be obtained for production use of the 
-applications that use IT Mill Toolkit libraries. Free and low-cost license
-alternatives for limited number of concurrent users are available.</p>
+applications that use IT Mill Toolkit libraries.</p>
 
 <p>A deployment license is required for each deployed copy of a program
 that uses Toolkit library. To be more exact, each Java Virtual
@@ -39,6 +38,10 @@ Machine (JVM) that runs a program that uses IT Mill Toolkit libraries, must have
 unique deployment license. For example, if the program is
 deployed to multiple servers (for load balancing or other reasons), each
 server needs an unique license.</p>
+
+<p>If the number of server installations is so high that separate deployment
+licenses are not an option, please contact <a href="http://www.itmill.com/">sales</a>
+to hear about OEM licensing options.</p>
 
 <h2>Purchasing Commercial License</h2>
 
@@ -50,9 +53,9 @@ contact sales at <a href="http://www.itmill.com/">IT Mill Ltd</a>.</p>
 
 <h2>License terms</h2>
 
-<p>The actual legal license text is in <a href="license.txt">license.txt</a>.</p>
+<p>The actual legal license text is in <a href="license.pdf">license.pdf</a>.</p>
 
-<h2>License files?</h2>
+<h2>License files</h2>
 
 <p>Technically license is stored as itmill-toolkit-license.xml -file, that is usually
 store in WEB-INF -directory of the web-application. The license file 
@@ -60,16 +63,23 @@ contains information about the scope and limitations of the lisence in fairly re
 form, so you might want to check the file contents. Toolkit package is shipped with
 unlimited license for development and testing purposes.</p>
 
-<h2>Open Source Edition?</h2>
+<p>Free unlimited development license <a href="lib/itmill-toolkit-license.xml">
+license-file</a> is included in product package in 
+lib -directory</p>
+
+<h2>Open Source Edition</h2>
 
 <p>The previous version 3 of the product was called Millstone User Interface Library. 
-Millstone library was licensed with very liberal LGPL-license. The new version 4 of 
-the library, is not licensed with open source license. The latest free release of 
+Millstone library was licensed with very liberal LGPL-license. The latest free release of 
 Millstone User Interface Library (version 3.1) can still be found from sourceforge.</p>
+
+<p>The new version 4 of the library, now called IT Mill Toolkit, is not licensed with 
+an open source license. This does not mean that the sources are closed, source code is 
+included in the product package for your convenience. </p>
 
 <p>Why did we change the license? Putting a clear transparent pricing model on the 
 product makes our customers decision-making easier. They know how much they are
-paying for and what whey get for their money.</p>
+paying for and that they can expect commercial grade quality product for their money.</p>
 
 <h2>Educational use</h2>
 
