Fixed email address.
svn changeset:527 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ of <a href="http://www.itmill.com/">professional support and service offering</a
 <ul>
 	<li><a href="licensing-guidelines.html">Licensing guidelines</a></li>
 	<li><a href="license.pdf">License</a></lI>
-	<li>Prices and purchase from <a href="mailto:support@itmill.com">sales@itmill.com</a></li>
+	<li>Prices and purchase from <a href="mailto:sales@itmill.com">sales@itmill.com</a></li>
 </ul>
 </p>
 </div>
