Source code links fixed.
svn changeset:535 branch:toolkit

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -57,7 +57,7 @@
 				mode</td>
 			</tr>
 			<tr>
-				<td><a href="src/com/itmill/toolkit/demo/HelloWorld.java">Source
+				<td><a href="src/com/itmill/toolkit/demo/HelloWorld.java.html">Source
 				code</a></td>
 				<td>See source code how an simple Toolkit application is
 				created.</td>
@@ -76,7 +76,7 @@
 				mode</td>
 			</tr>
 			<tr>
-				<td><a href="src/com/itmill/toolkit/demo/Calc.java">Source
+				<td><a href="src/com/itmill/toolkit/demo/Calc.java.html">Source
 				code</a></td>
 				<td>See source code how an simple Toolkit application is
 				created.</td>
