-Ohjelmistokehitys ja -arkkitehtuuri expo specific index page.
svn changeset:570 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,46 @@
 </head>
 <body>
 
+ <div id="toolkit"></div>
+
+ <div id="expo-banner">Sovelluskehitys ja - arkkitehtuuri <em>2007</em></div>
+
+ <div id="expo">
+  <div class="top"><div></div></div>
+  <div class="content">
+   <h3>Hyvä Sovelluskehitys ja -arkkitehtuuri -konferenssikävijä,</h3>
+   <p>
+	Tapasimme helmikuussa Kalastajatorpalla ja keskustelimme verkkosovellusten
+	käyttöliittymäratkaisuista. Tämä muistitikku sisältää SOA-ratkaisuesityksen, tuotteen
+	demon ja hinnaston IT  Mill Toolkit -tuotteestamme. Tutustu rauhassa ja ota
+	yhteyttä, kun aika on oikea.
+   </p>
+   <div class="links">
+    <div class="top"><div></div></div>
+    <div class="cont">
+     &middot; <a href="http://toolkit.itmill.com/demo">IT Mill Toolkit Demo</a> <em>(online)</em><br />
+	 &middot; <a href="IT Mill Price List - February 2007.pdf">IT Mill Price List - February 2007</a> <em>(PDF)</em><br />
+	 &middot; <a href="IT Mill Toolkit and SOA.pdf">IT Mill Toolkit and SOA</a> <em>(PDF)</em>
+	</div>
+	<div class="bottom"><div></div></div>
+   </div>
+	Alta löydät myös tuotteen demon ja materaalia sovelluskehittäjille.<br /><br />
+
+	Terveisin,<br /><br />
+	<div class="contact">
+	 <strong>Ville Ingman</strong><br />
+	 p. 040 5949 313<br />
+	 <a href="mailto:ville.ingman@itmill.com">ville.ingman@itmill.com</a>
+	</div>
+	<div class="contact">
+	 <strong>Joonas Lehtinen</strong><br />
+	 p. 040 503 5001<br />
+	 <a href="mailto:joonas.lehtinen@itmill.com">joonas.lehtinen@itmill.com</a>
+	</div>
+  </div>
+  <div class="bottom"><div></div></div>
+ </div>
+
  <div id="intro">
   <div class="top"><div></div></div>
   <div class="content">
