--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
  <div id="expo">
   <div class="top"><div></div></div>
   <div class="content">
-   <h3>Hyvä Sovelluskehitys ja -arkkitehtuuri -konferenssikävijä,</h3>
+   <h3>Hyv&auml; Sovelluskehitys ja -arkkitehtuuri -konferenssik&auml;vij&auml;,</h3>
    <p>
 	Tapasimme helmikuussa Kalastajatorpalla ja keskustelimme verkkosovellusten
-	käyttöliittymäratkaisuista. Tämä muistitikku sisältää SOA-ratkaisuesityksen, tuotteen
-	demon ja hinnaston IT  Mill Toolkit -tuotteestamme. Tutustu rauhassa ja ota
-	yhteyttä, kun aika on oikea.
+	k&auml;ytt&ouml;liittym&auml;ratkaisuista. T&auml;m&auml; muistitikku sis&auml;lt&auml;&auml; SOA-ratkaisuesityksen, maaliskuussa julkistettavan IT  
+	Mill Toolkit 4 -tuotteemme beta-version ja hinnastomme. Tutustu rauhassa ja ota
+	yhteytt&auml;, kun aika on oikea.
    </p>
    <div class="links">
     <div class="top"><div></div></div>
@@ -28,7 +28,7 @@
 	</div>
 	<div class="bottom"><div></div></div>
    </div>
-	Alta löydät myös tuotteen demon ja materaalia sovelluskehittäjille.<br /><br />
+	Alta l&ouml;yd&auml;t IT Mill Toolkit kirjaston, tuotteen demon ja muuta materaalia sovelluskehitt&auml;jille.<br /><br />
 
 	Terveisin,<br /><br />
 	<div class="contact">
