Corrected the paths to contents.. Note that these are of the version beta1. Should be versioned.
svn changeset:635 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
   <div class="content">
 	<h4>Library</h4>
 	<ul>
-	<li><a href="lib/itmill-toolkit-4.0.0-alpha-20070206-1.jar">Toolkit</a></li>
-	<li><a href="lib/itmill-toolkit-src-4.0.0-alpha-20070206-1.jar">Toolkit Source</a></li>
-	<li><a href="lib/ajax-themes">AJAX themes</a></li>
-	<li><a href="lib/web-themes">Web themes</a></li>
+	<li><a href="lib/itmill-toolkit-4.0.0-beta1.jar">Toolkit</a></li>
+	<li><a href="lib/itmill-toolkit-src-4.0.0-beta1.jar">Toolkit Source</a></li>
+	<li><a href="lib/itmill-toolkit-themes-4.0.0-beta1.jar">Themes</a></li>
+	<li><a href="lib/itmill-toolkit-license.xml">Developer license</a></li>
 	</ul>
 
 	<h4>Documentation</h4>
