Added source tracking to links (in index.html). REMEMBER TO Change 1001 ->1002 for beta-1 (without ohjelmistokehitys stuff)
svn changeset:645 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <div class="links">
     <div class="top"><div></div></div>
     <div class="cont">
-     &middot; <a href="http://toolkit.itmill.com/demo">IT Mill Toolkit Demo</a> <em>(online)</em><br />
+     &middot; <a href="http://toolkit.itmill.com/demo/?s=1000">IT Mill Toolkit Demo</a> <em>(online)</em><br />
 	 &middot; <a href="IT Mill Price List - February 2007.pdf">IT Mill Price List - February 2007</a> <em>(PDF)</em><br />
 	 &middot; <a href="IT Mill Toolkit and SOA.pdf">IT Mill Toolkit and SOA</a> <em>(PDF)</em>
 	</div>
@@ -105,7 +105,7 @@
  <h2>Demo and sample code</h2>
  <p>To get quick feel of the toolkit, look at the demos:</p>
 	<ul>
-	<li><a href="http://toolkit.itmill.com/demo/">Online at IT Mill</a></li>
+	<li><a href="http://toolkit.itmill.com/demo/?s=1001">Online at IT Mill</a></li>
 	<li>To run demos locally, run start.bat (on Windows) or start.sh (on Mac or Linux) in <a href="demo">demo -directory</a></li>
 	</ul>
 </div>
