index.html ready for 4.0.0-beta1
svn changeset:655 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -7,44 +7,6 @@
 
  <div id="toolkit"></div>
 
- <div id="expo-banner">Sovelluskehitys ja - arkkitehtuuri <em>2007</em></div>
-
- <div id="expo">
-  <div class="top"><div></div></div>
-  <div class="content">
-   <h3>Hyv&auml; Sovelluskehitys ja -arkkitehtuuri -konferenssik&auml;vij&auml;,</h3>
-   <p>
-	Tapasimme helmikuussa Kalastajatorpalla ja keskustelimme verkkosovellusten
-	k&auml;ytt&ouml;liittym&auml;ratkaisuista. T&auml;m&auml; muistitikku sis&auml;lt&auml;&auml; SOA-ratkaisuesityksen, maaliskuussa julkistettavan IT  
-	Mill Toolkit 4 -tuotteemme beta-version ja hinnastomme. Tutustu rauhassa ja ota
-	yhteytt&auml;, kun aika on oikea.
-   </p>
-   <div class="links">
-    <div class="top"><div></div></div>
-    <div class="cont">
-     &middot; <a href="http://toolkit.itmill.com/demo/?s=1000">IT Mill Toolkit Demo</a> <em>(online)</em><br />
-	 &middot; <a href="IT Mill Price List - February 2007.pdf">IT Mill Price List - February 2007</a> <em>(PDF)</em><br />
-	 &middot; <a href="IT Mill Toolkit and SOA.pdf">IT Mill Toolkit and SOA</a> <em>(PDF)</em>
-	</div>
-	<div class="bottom"><div></div></div>
-   </div>
-	Alta l&ouml;yd&auml;t IT Mill Toolkit kirjaston, tuotteen demon ja muuta materaalia sovelluskehitt&auml;jille.<br /><br />
-
-	Terveisin,<br /><br />
-	<div class="contact">
-	 <strong>Ville Ingman</strong><br />
-	 p. 040 5949 313<br />
-	 <a href="mailto:ville.ingman@itmill.com">ville.ingman@itmill.com</a>
-	</div>
-	<div class="contact">
-	 <strong>Joonas Lehtinen</strong><br />
-	 p. 040 503 5001<br />
-	 <a href="mailto:joonas.lehtinen@itmill.com">joonas.lehtinen@itmill.com</a>
-	</div>
-  </div>
-  <div class="bottom"><div></div></div>
- </div>
-
  <div id="intro">
   <div class="top"><div></div></div>
   <div class="content">
@@ -105,7 +67,7 @@
  <h2>Demo and sample code</h2>
  <p>To get quick feel of the toolkit, look at the demos:</p>
 	<ul>
-	<li><a href="http://toolkit.itmill.com/demo/?s=1001">Online at IT Mill</a></li>
+	<li><a href="http://toolkit.itmill.com/demo/?s=4.0.0-beta1-package">Online at IT Mill</a></li>
 	<li>To run demos locally, run start.bat (on Windows) or start.sh (on Mac or Linux) in <a href="demo">demo -directory</a></li>
 	</ul>
 </div>
