--- a/licensing-guidelines.html
+++ b/licensing-guidelines.html
@@ -61,7 +61,7 @@
 		
 		<p>Technically license is stored as itmill-toolkit-license.xml -file, that is usually
 		store in WEB-INF -directory of the web-application. The license file 
-		contains information about the scope and limitations of the lisence in fairly readable
+		contains information about the scope and limitations of the license in fairly readable
 		form, so you might want to check the file contents. Toolkit package is shipped with
 		unlimited license for development and testing purposes.</p>
 		
