Removed link to sources from index.html
svn changeset:666 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 
 	<h4>Examples</h4>
 	<ul>
-	<li><a href="demo/src">Demo application sources</a></li>
-	<li><a href="demo/itmill-toolkit.war">Demo WAR-package</a></li>
+	<li><a href="demo/itmill-toolkit.war">Demo (as WAR-package)</a></li>
 	</ul>
    </div>
   <div class="bottom"><div></div></div>
