Removed dots from end of lines.
svn changeset:673 branch:toolkit

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,7 +17,7 @@
 	<h3>Feature Browser</h3>
 	<div class="option">
 	 <span class="link"><a href="features/">Autodetected mode</a></span>
-	 <span class="desc">Use AJAX if supported by browser, otherwise fallback to HTML mode.</span>
+	 <span class="desc">Use AJAX if supported by browser, otherwise fallback to HTML mode</span>
 	</div>
 	
 	<div class="option">
@@ -49,7 +49,7 @@
 	
 	<div class="option">
 	 <span class="link"><a href="src/com/itmill/toolkit/demo/HelloWorld.java.html">Source code</a></span>
-	 <span class="desc">See source code how a simple Toolkit application is created.</span>
+	 <span class="desc">See source code how a simple Toolkit application is created</span>
 	</div>
 	
 	<h4>Calculator</h4>
@@ -61,7 +61,7 @@
 	
 	<div class="option">
 	 <span class="link"><a href="src/com/itmill/toolkit/demo/Calc.java.html">Source	code</a></span>
-	 <span class="desc">See source code how a simple Toolkit application is created.</span>
+	 <span class="desc">See source code how a simple Toolkit application is created</span>
     </div>
   </div>
 
