Better instructions for starting demo on index.html
svn changeset:699 branch:toolkit

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
  <p>To get quick feel of the toolkit, look at the demos:</p>
 	<ul>
 	<li><a href="http://toolkit.itmill.com/demo/?s=4.0.0-beta1-package">Online at IT Mill</a></li>
-	<li>To run demos locally, run start.bat (on Windows) or start.sh (on Mac or Linux) in <a href="demo">demo -directory</a></li>
+	<li>To run demos locally, run start.bat (on Windows) or start.sh (on Mac or Linux) 
+	in <a href="demo">demo -directory</a>.
+	After the local demo server has started, demos are found in
+	<a href="http://127.0.0.1:8888/">http://127.0.0.1:8888/</a>.
+	</li>
 	</ul>
 </div>
 
