--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div class="preview"></div>
    <h2>Introduction</h2>
     <p>
-	IT Mill Toolkit allows easy creation of first class user interfaces (UI) for Java-based programs. 
+	IT Mill Toolkit allows easy creation of first class web user interfaces (UI) for Java-based programs. 
 	UI can be programmed in Java with easy to learn <a href="doc/api/index.html">API</a> and the toolkit takes care of 
 	creating stunning <a href="http://www.openajax.org/whitepaper.html" target="new">AJAX-based</a> UI.
 	</p>
@@ -21,7 +21,7 @@
 	AJAX user interfaces support <a href="http://www.microsoft.com/windows/ie/default.mspx" target="new">
 	Internet Explorer</a> 6-7, <a href="http://www.mozilla.com/firefox/" target="new">
 	Firefox</a> 1.5-2 and <a href="http://www.apple.com/safari/" target="new">Safari</a> 2. 
-	Older browsers are supported by automatically providing traditional web-based UI.
+	Older or limited browsers are supported by full page HTML rendering mode.
 	</p>
    </div>
   <div class="bottom"><div></div></div>
