--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,7 +16,7 @@
   <div id="feature-browser">
 	<h3>Feature Browser</h3>
 	<div class="option">
-	 <span class="link"><a href="features/">Autodetected mode</a></span>
+	 <span class="link"><a href="features/?renderingMode=detect">Autodetected mode</a></span>
 	 <span class="desc">Use AJAX if supported by browser, otherwise fallback to HTML mode</span>
 	</div>
 	
@@ -38,7 +38,7 @@
 	<h4>Hello World</h4>
 	
 	<div class="option">
-	 <span class="link"><a href="hello/">Autodetected mode</a></span>
+	 <span class="link"><a href="hello/?renderingMode=detect">Autodetected mode</a></span>
 	 <span class="desc">Use AJAX if supported by browser, otherwise fallback to HTML mode</span>
 	</div>
 	
@@ -50,7 +50,7 @@
 	<h4>Calculator</h4>
 	
 	<div class="option">
-	 <span class="link"><a href="calc/">Autodetected mode</a></span>
+	 <span class="link"><a href="calc/?renderingMode=detect">Autodetected mode</a></span>
 	 <span class="desc">Use AJAX if supported by browser, otherwise fallback to HTMLmode</span>
 	</div>
 	
