Fixed index.html VERSION tag. /index.html MUST be in synch with /build/VERSION tag, otherwise automatic build script fails.
svn changeset:888 branch:trunk

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   <div class="content">
 	<h4>Library</h4>
 	<ul>
-	<li><a href="lib/itmill-toolkit-4.0.0-beta2.jar">Toolkit</a></li>
-	<li><a href="lib/itmill-toolkit-src-4.0.0-beta2.jar">Toolkit Source</a></li>
-	<li><a href="lib/itmill-toolkit-themes-4.0.0-beta2.jar">Themes</a></li>
+	<li><a href="lib/itmill-toolkit-4.0.0-testing.jar">Toolkit</a></li>
+	<li><a href="lib/itmill-toolkit-src-4.0.0-testing.jar">Toolkit Source</a></li>
+	<li><a href="lib/itmill-toolkit-themes-4.0.0-testing.jar">Themes</a></li>
 	<li><a href="lib/itmill-toolkit-license.xml">Developer license</a></li>
 	</ul>
 
@@ -67,7 +67,7 @@
  <h2>Demo and sample code</h2>
  <p>To get quick feel of the toolkit, look at the demos:</p>
 	<ul>
-	<li><a href="http://toolkit.itmill.com/demo/?s=4.0.0-beta2-package">Online at IT Mill</a></li>
+	<li><a href="http://toolkit.itmill.com/demo/?s=4.0.0-testing-package">Online at IT Mill</a></li>
 	<li>To run demos locally, run start.bat (on Windows) or start.sh (on Mac or Linux) 
 	in <a href="demo">demo -directory</a>.
 	After the local demo server has started, demos are found in
