--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link href="doc/manual/html-style/local.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+ <div id="container"><div id="header"><h1></h1></div><div id="itmilllogo"></div>
 
  <div id="toolkit"></div>
 
@@ -14,15 +15,15 @@
    <div class="preview"></div>
    <h2>Introduction</h2>
     <p>
-	IT Mill Toolkit allows easy creation of first class web user interfaces (UI) for Java-based programs. 
-	UI can be programmed in Java with easy to learn <a href="doc/api/index.html">API</a> and the toolkit takes care of 
-	creating stunning <a href="http://www.openajax.org/whitepaper.html" target="new">AJAX-based</a> UI.
+	IT Mill Toolkit allows easy creation of first-class web user interfaces for Java-based programs. 
+	You can program your user interfaces in Java with our easy-to-learn <a href="doc/api/index.html">API</a>; 
+	Toolkit then takes care of rendering them as stunning <a href="http://www.openajax.org/whitepaper.html" target="new">AJAX-based</a> implementations.
 	</p>
 	<p>
 	AJAX user interfaces support <a href="http://www.microsoft.com/windows/ie/default.mspx" target="new">
 	Internet Explorer</a> 6-7, <a href="http://www.mozilla.com/firefox/" target="new">
 	Firefox</a> 1.5-2 and <a href="http://www.apple.com/safari/" target="new">Safari</a> 2. 
-	Older or limited browsers are supported by full page HTML rendering mode.
+	Older or limited browsers are supported by Toolkit’s full-page HTML rendering mode.
 	</p>
    </div>
   <div class="bottom"><div></div></div>
@@ -46,7 +47,7 @@
 	<li><a href="doc/manual/index.html">Manual</a>
 		<ul>
 			<li><a href="doc/manual/ch01.html">Introduction</a></li>
-			<li><a href="doc/manual/ch01s02.html">Example application walkthrough</a></li>
+			<li><a href="doc/manual/ch01s02.html">Sample application walkthrough</a></li>
 			<li><a href="doc/manual/ch01s04.html">Development environment setup</a></li>
 			<li><a href="doc/manual/pt02.html">API Reference</a></li>
 		</ul>
@@ -56,7 +57,7 @@
 
 	<h4>Examples</h4>
 	<ul>
-	<li><a href="demo/itmill-toolkit.war">Demo (as WAR-package)</a></li>
+	<li><a href="demo/itmill-toolkit.war">Demo (WAR package)</a></li>
 	</ul>
    </div>
   <div class="bottom"><div></div></div>
@@ -65,12 +66,12 @@
 
 <div id="demo">
  <h2>Demo and sample code</h2>
- <p>To get quick feel of the toolkit, look at the demos:</p>
+ <p>To get a quick feel for Toolkit, pleas have a look at the demos:</p>
 	<ul>
 	<li><a href="http://toolkit.itmill.com/demo/?s=4.0.0-testing-package">Online at IT Mill</a></li>
-	<li>To run demos locally, run start.bat (on Windows) or start.sh (on Mac or Linux) 
-	in <a href="demo">demo -directory</a>.
-	After the local demo server has started, demos are found in
+	<li>To run demos locally, run start.bat (Windows) or start.sh (Mac or Linux) 
+	in the <a href="demo">demo -directory</a>.
+	After the local demo server has started, the demos are found at
 	<a href="http://127.0.0.1:8888/">http://127.0.0.1:8888/</a>. 
 	</li>
 	</ul>
@@ -79,18 +80,16 @@
 <div id="support">
 <h2>Support</h2>
 <p>
-Free support forum contains answers to most commonly asked questions,
-it will be opened later. For the time being use
-<a href="mailto:support@itmill.com">support@itmill.com</a>. IT Mill offers wide range
-of <a href="http://www.itmill.com/">professional support and service offering</a>.
+Our free <a href="http://forum.itmill.com/">support forum</a> features on-line experts who will deal with  the most common questions. 
+For professionals IT Mill offers a wide range of <a href="http://www.itmill.com/">commercial support and service offerings</a>.
 </p> 
 </div>
 
 <div id="license">
 <h2>License</h2>
 <ul>
-	<li><a href="licensing-guidelines.html">Licensing guidelines</a></li>
-	<li><a href="license.pdf">License</a></lI>
+	<li><a href="licensing-guidelines.html">Toolkit Licensing Guidelines</a></li>
+	<li><a href="license.pdf">License (PDF)</a></lI>
 	<li>Prices and purchase from <a href="mailto:sales@itmill.com">sales@itmill.com</a></li>
 </ul>
 </div>
