Corrected license terms
svn changeset:948 branch:trunk

--- a/licensing-guidelines.html
+++ b/licensing-guidelines.html
@@ -12,8 +12,7 @@
 		Licensing in nutshell:
 		<ul>
 			<li>Free for learning, development and testing</li>
-			<li>Free for small production deployments (max 4 concurrent active users per server)</li>
-			<li>Commercial license is required for larger production environment</li>
+			<li>Commercial license is required for production environment</li>
 			<li>For distributing IT Mill Toolkit as a part of your own
 			product, either purchase suitable commercial deployment licenses or
 			contact us for OEM-license tailored for your needs.</li>
@@ -23,11 +22,6 @@
 		
 		<p>Application development is complitely free. Furthermore, you can deploy 
 		the developed application for testing and validation at the development time.</p>
-		
-		<p>You can obtain a free license for production use in small workgroups from
-		<a href="http://www.itmill.com/">IT Mill License store</a>. This license 
-		covers use of 4 active users concurrently
-		using the application in one server.</p>
 		
 		<h3>Commercial use</h3>
 		
