Removed incorrect div which duplicated logo, fixed typo, removed trash characters and added Opera to browser list.
svn changeset:949 branch:trunk

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <link href="doc/manual/html-style/local.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
- <div id="container"><div id="header"><h1></h1></div><div id="itmilllogo"></div>
-
  <div id="toolkit"></div>
 
  <div id="intro">
@@ -22,8 +20,9 @@
 	<p>
 	AJAX user interfaces support <a href="http://www.microsoft.com/windows/ie/default.mspx" target="new">
 	Internet Explorer</a> 6-7, <a href="http://www.mozilla.com/firefox/" target="new">
-	Firefox</a> 1.5-2 and <a href="http://www.apple.com/safari/" target="new">Safari</a> 2. 
-	Older or limited browsers are supported by Toolkit’s full-page HTML rendering mode.
+	Firefox</a> 1.5-2, <a href="http://www.opera.com/" target="new">
+	Opera</a> 9, <a href="http://www.apple.com/safari/" target="new">Safari</a> 2 and many others, see Release Notes for more information.
+	Older or limited browsers are supported by Toolkit's full-page HTML rendering mode.
 	</p>
    </div>
   <div class="bottom"><div></div></div>
@@ -44,6 +43,7 @@
 
 	<h4>Documentation</h4>
 	<ul>
+	<li><a href="ReleaseNotes.html">Release Notes</a>
 	<li><a href="doc/manual/index.html">Manual</a>
 		<ul>
 			<li><a href="doc/manual/ch01.html">Introduction</a></li>
@@ -66,7 +66,7 @@
 
 <div id="demo">
  <h2>Demo and sample code</h2>
- <p>To get a quick feel for Toolkit, pleas have a look at the demos:</p>
+ <p>To get a quick feel for Toolkit, please have a look at the demos:</p>
 	<ul>
 	<li><a href="http://toolkit.itmill.com/demo/?s=4.0.0-testing-package">Online at IT Mill</a></li>
 	<li>To run demos locally, run start.bat (Windows) or start.sh (Mac or Linux) 
