Added href link to Release Notes
svn changeset:950 branch:trunk

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	AJAX user interfaces support <a href="http://www.microsoft.com/windows/ie/default.mspx" target="new">
 	Internet Explorer</a> 6-7, <a href="http://www.mozilla.com/firefox/" target="new">
 	Firefox</a> 1.5-2, <a href="http://www.opera.com/" target="new">
-	Opera</a> 9, <a href="http://www.apple.com/safari/" target="new">Safari</a> 2 and many others, see Release Notes for more information.
+	Opera</a> 9, <a href="http://www.apple.com/safari/" target="new">Safari</a> 2 and many others, see <a href="ReleaseNotes.html">Release Notes</a> for more information.
 	Older or limited browsers are supported by Toolkit's full-page HTML rendering mode.
 	</p>
    </div>
