--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -31,7 +32,17 @@ table.issues td {
 }
 </style>
 </head>
-<body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div id="container"><div id="header"><h1>IT Mill Toolkit</h1></div><div id="itmilllogo"></div><div id="page"><div class="navheader"><table width="100%"><tr><th align="center" colspan="3">IT Mill Toolkit</th></tr><tr><td align="left" width="20%">&nbsp;</td><th align="center" width="60%">&nbsp;</th><td align="right" width="20%"></td></tr></table><hr></div><div class="book" lang="en"><div class="titlepage"><div><div><h1 class="title"><a name="N40001"></a>IT Mill Toolkit Release Notes</h1></div><div><h2 class="subtitle">Version 4.0.0</h2></div><div><div class="author"><h3 class="author"></h3></div></div><div><p class="copyright">Copyright &copy; 2007 Oy IT Mill Ltd. All rights reserved.</p></div><div><p class="pubdate">2007-03-15</p></div><div><div class="abstract"><p class="title"></p>
+<body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div id="container">
+<div id="header"><h1>IT Mill Toolkit</h1></div><div id="itmilllogo"></div><div id="page">
+<div class="navheader"><table width="100%"><tr><th align="center" colspan="3">IT Mill Toolkit</th></tr>
+<tr><td align="left" width="20%">&nbsp;</td><th align="center" width="60%">&nbsp;</th>
+<td align="right" width="20%"></td></tr></table><hr></div><div class="book" lang="en">
+<div class="titlepage"><div><div><h1 class="title">
+<a name="N40001"></a>IT Mill Toolkit Release Notes</h1></div>
+<div><h2 class="subtitle">Version 4.0.0</h2></div><div>
+<div class="author"><h3 class="author"></h3></div></div>
+<div><p class="copyright">Copyright &copy; 2007 Oy IT Mill Ltd. All rights reserved.</p></div>
+<div><div class="abstract"><p class="title"></p>
 
 <h3>General</h3>
 <p>
@@ -59,19 +70,29 @@ Supported server-side environments are
 </li><li>Jetty, since version 5
 </li><li>Oracle Application Server, since version 9i
 </li><li>Sun Java Systems Application Server, since version 7
-</li></ul></li></ul><p>
+</li></ul></li></ul>
+<p>
 Supported client-side environments are
 </p>
-<ul><li>Browsers
-<ul><li>Internet Explorer, version 6.0 and 7.0
-</li><li>Firefox, version 1.5 and 2.0
-</li><li>Safari, version 2.0
-</li><li>Opera, since version 9.0
-</li><li>Konqueror, since version 3.5
-</li><li>Camino since version 1.0
-</li><li>Series60 since version 3.1 fp1
-</li><li>WebKit since version 400
-</li></ul></li><li>Operating systems
+<ul>
+ <li>Browsers on AJAX-mode
+ <ul>
+  <li>Internet Explorer, version 6.0 and 7.0</li>
+  <li>Firefox, version 1.5 and 2.0</li>
+  <li>Safari, version 2.0</li>
+  <li>Opera, since version 9.0</li>
+  <li>Konqueror, since version 3.5</li>
+  <li>Camino since version 1.0</li>
+  <li>Series60 since version 3.1 fp1</li>
+  <li>WebKit since version 400</li>
+ </ul>
+ </li>
+ <li>Browsers on HTML-mode
+ <ul>  
+  <li>Other browsers (non-AJAX capable) use HTML-mode automatically</li>
+ </ul>
+ </li>
+<li>Operating systems
 <ul><li>Windows 2000 Pro/2000 Server 2003/XP Server/XP Pro/XP Home/Vista
 </li><li>Mac OS X 10.3 / 10.4 / 10.5
 </li><li>Linux Debian / RedHat / Ubuntu / Suse
